# ChangeLog for media-plugins/gst-plugins-libmms
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/ChangeLog,v 1.112 2014/08/07 19:55:09 jer Exp $

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-libmms-0.10.23-r1.ebuild, gst-plugins-libmms-1.2.4-r1.ebuild:
  Stable for HPPA (bug #512012).

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-0.10.23-r1.ebuild, gst-plugins-libmms-1.2.4-r1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-0.10.23-r1.ebuild, gst-plugins-libmms-1.2.4-r1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-0.10.23-r1.ebuild, gst-plugins-libmms-1.2.4-r1.ebuild:
  Stable for amd64, wrt bug #512912

  18 Jun 2014; Michał Górny <mgorny@gentoo.org>
  gst-plugins-libmms-0.10.23-r1.ebuild, gst-plugins-libmms-1.2.4-r1.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*gst-plugins-libmms-0.10.23-r1 (10 Jun 2014)
*gst-plugins-libmms-1.2.4-r1 (10 Jun 2014)

  10 Jun 2014; Michał Górny <mgorny@gentoo.org>
  +gst-plugins-libmms-0.10.23-r1.ebuild, +gst-plugins-libmms-1.2.4-r1.ebuild:
  Enable multilib support, bug #493176.

*gst-plugins-libmms-1.2.4 (31 May 2014)

  31 May 2014; Pacho Ramos <pacho@gentoo.org> +gst-plugins-libmms-1.2.4.ebuild,
  -gst-plugins-libmms-1.0.10.ebuild, -gst-plugins-libmms-1.2.0.ebuild:
  Version bump, drop old

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-1.2.3.ebuild:
  Stable for sparc, wrt bug #507568

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-1.2.3.ebuild:
  Stable for alpha, wrt bug #507568

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libmms-1.2.3.ebuild:
  Stable for ppc64, wrt bug #507568

  14 Apr 2014; Agostino Sarubbo <ago@gentoo.org>