@@ -1,13 +1,13 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/gst-plugins-libmms-1.2.4-r1.ebuild,v 1.6 2014/08/07 19:55:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libmms/gst-plugins-libmms-1.2.4-r1.ebuild,v 1.7 2014/08/21 10:43:28 ago Exp $
 
 EAPI="5"
 
 GST_ORG_MODULE=gst-plugins-bad
 inherit gstreamer
 
-KEYWORDS="~alpha amd64 ~arm hppa ~ia64 ppc ~ppc64 ~sparc x86 ~amd64-fbsd"
+KEYWORDS="~alpha amd64 ~arm hppa ~ia64 ppc ppc64 ~sparc x86 ~amd64-fbsd"
 IUSE=""
 
 RDEPEND=">=media-libs/libmms-0.6.2-r1[${MULTILIB_USEDEP}]"
